--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -70,7 +70,10 @@
 <condition property="android.ndk.path" value="${env.EXTLIBS_HOME}/android-ndk-r8b" else=""><os family="windows" /></condition>
 <property name="apk" value="${android.temp}/TotalCross.apk" />
 
-<property name="source.lb.path"   value="${basedir}/../../../Litebase/LitebaseSDK"/>
+<property name="source.lb.path.local"  value="${basedir}/../../../../../../Litebase/LitebaseSDK"/>
+<property name="source.lb.path.server" value="${basedir}/../../../../../LitebaseSDK"/>
+<available file="${source.lb.path.local}/dist/lib/LitebaseLib.tcz" property="source.lb.path" value="${source.lb.path.local}" />
+<available file="${source.lb.path.server}/dist/lib/LitebaseLib.tcz" property="source.lb.path" value="${source.lb.path.server}" />
 
 <!-- installshield paths -->
 <property file="${rootpath}/ishield.properties"/>
@@ -230,35 +233,6 @@ target: buildInstalls - run installshield to create the SDK and Samples
         installers for win32
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
-<target name="mergeAPK" >
-   <unzip src="${target.sdk3.path}/dist/vm/android/Litebase.apk" dest="${target.sdk3.path}/dist/vm/android/lb"/>
-   <unzip src="${target.sdk3.path}/dist/vm/android/TotalCross.apk" dest="${target.sdk3.path}/dist/vm/android/tc"/>
-   <unzip src="${target.sdk3.path}/dist/vm/android/lb/assets/tcfiles.zip" dest="${target.sdk3.path}/dist/vm/android/tc/assets"/>
-   
-   <zip destfile="${target.sdk3.path}/dist/vm/android/tc/assets/tcfiles.zip"  includes="LitebaseLib.tcz" 
-      basedir="${target.sdk3.path}/dist/vm/android/tc/assets" update="yes" compress="no" keepcompression="no" />
-   <delete file="${target.sdk3.path}/dist/vm/android/tc/assets/LitebaseLib.tcz" />
-
-   <copy todir="${target.sdk3.path}/dist/vm/android/tc/lib">  <fileset dir="${target.sdk3.path}/dist/vm/android/lb/lib"/>               </copy>
-
-   <zip destfile="${target.sdk3.path}/dist/vm/android/TotalCross.apk"  includes="**" excludes="assets/tcfiles.zip,res/raw/beep.ogg"  basedir="${target.sdk3.path}/dist/vm/android/tc"  />
-   <zip destfile="${target.sdk3.path}/dist/vm/android/TotalCross.apk"  includes="assets/tcfiles.zip,res/raw/beep.ogg"  basedir="${target.sdk3.path}/dist/vm/android/tc" update="yes" compress="no" keepcompression="yes"  />
-
-   <delete dir="${target.sdk3.path}/dist/vm/android/lb"/>
-   <delete dir="${target.sdk3.path}/dist/vm/android/tc"/>
-   <delete file="${target.sdk3.path}/dist/vm/android/Litebase.apk"/>
-   
-   <exec executable="jarsigner${exe}">
-      <arg line="-digestalg SHA1 -sigalg MD5withRSA -keystore ${source.sdk.path}/etc/security/tcandroidkey.keystore -storepass @ndroid$w -keypass @ndroidsw ${target.sdk3.path}/dist/vm/android/TotalCross.apk tcandroidkey" />
-   </exec>
-
-   <!--signjar alias="tcandroidkey" keystore="${source.sdk.path}/etc/security/tcandroidkey.keystore"
-    storepass="@ndroid$w" keypass="@ndroidsw" sigalg="SHA1withRSA" digestalg="SHA1">
-    <path><fileset dir="${target.sdk3.path}/dist/vm/android" includes="TotalCross.apk" /></path>
-   </signjar-->
-
-</target>
-
 <target name="reorganizeSamples" >
   <property name="samples"  value="${target.sdk3.path}/dist/samples/"/>
 
@@ -302,7 +276,6 @@ target: buildInstalls - run installshield to create the SDK and Samples
    <copy todir="${target.sdk3.path}" file="${source.sdk.path}/license.txt" overwrite="yes"  />
    <copy file="${source.sdk.path}/docs/companion_resources/ant_build/build.xml" todir="${target.sdk3.path}/docs" overwrite="yes" />
    
-   <antcall target="mergeAPK" />
    <antcall target="reorganizeSamples" />
 
 </target>
@@ -567,6 +540,9 @@ target: Android builds
       <fileset dir="${source.vm.path}/src/jni/libs" >
          <include name="**/*.so" />
       </fileset>
+      <fileset dir="${source.lb.path}/builders/android/apps/litebase/libs" >
+         <include name="**/*.so" />
+      </fileset>
    </copy>
   <retry retrycount="3">
     <antcall target="build_android_java" />
@@ -580,27 +556,7 @@ target: Android builds
   </exec>
 </target>
 
-<target name="mergeAPKlocal" >
-   <property name="out" value="${base.temp.path}/tcapk" />
-   <delete dir="${out}" />
-   <unzip src="${apk}" dest="${out}"/>   
-   <zip destfile="${out}/assets/tcfiles.zip"  includes="LitebaseLib.tcz" basedir="${source.lb.path}/dist/lib" update="yes" compress="no" keepcompression="no" />
-   <copy todir="${out}/lib">  <fileset dir="${source.lb.path}/builders/android/apps/litebase/libs"/> </copy>
-   <zip destfile="${apk}"  includes="**" excludes="assets/tcfiles.zip,res/raw/beep.ogg" basedir="${out}" />
-   <zip destfile="${apk}"  includes="assets/tcfiles.zip,res/raw/beep.ogg" basedir="${out}" update="yes" compress="no" keepcompression="yes" />
-
-   <exec executable="jarsigner${exe}">
-      <arg line="-digestalg SHA1 -sigalg MD5withRSA -keystore ${source.sdk.path}/etc/security/tcandroidkey.keystore -storepass @ndroid$w -keypass @ndroidsw ${android.temp}/TotalCross.apk tcandroidkey" />
-   </exec>
-   
-   <!--signjar alias="tcandroidkey" keystore="${source.sdk.path}/etc/security/tcandroidkey.keystore"
-    storepass="@ndroid$w" keypass="@ndroidsw"  sigalg="SHA1withRSA" digestalg="SHA1">
-    <path><fileset dir="${android.temp}" includes="TotalCross.apk" /></path>
-   </signjar-->
-
-</target>
-
-<target name="install_android" depends="buildAndroid_sdkNoClean,mergeAPKlocal,adb" description="Builds and installs TotalCross on Android." />
+<target name="install_android" depends="buildAndroid_sdkNoClean,adb" description="Builds and installs TotalCross on Android." />
 
 <target name="buildAndroid_sdkNoClean">
   <delete dir="${android.project.path}/out/src" />
